# gauss-elim-game

./: CHANGELOG.md  Cargo.toml  README.md
src/: algebra.rs  main.rs
